# Plugins/BTCPayServer.Plugins.SatoshiTickets/ViewModels/Api/CreateEventRequest.cs
@@ -21,6 +21,4 @@ public class CreateEventRequest
     public int? MaximumEventCapacity { get; set; }
     public string EventLogoFileId { get; set; }
     public bool Enable { get; set; }
-    public Guid? BundledRaffleId { get; set; }
-    public int BundledRaffleTicketsPerAdmission { get; set; }
 }
