# Plugins/BTCPayServer.Plugins.SatoshiTickets/ViewModels/Api/TicketTypeData.cs
@@ -1,3 +1,5 @@
+using System;
+
 namespace BTCPayServer.Plugins.SatoshiTickets.Models.Api;
 
 public class TicketTypeData
@@ -12,4 +14,6 @@ public class TicketTypeData
     public int QuantityAvailable { get; set; }
     public bool IsDefault { get; set; }
     public string TicketTypeState { get; set; }
+    public Guid? BundledRaffleId { get; set; }
+    public int BundledRaffleTicketsPerAdmission { get; set; }
 }
